# command-line-ock

./: .gitignore  CHANGELOG.md  command-line-ock.cabal  command-line-ock.nix  default.nix  shell.nix
src/: OCK.hs
src/Data/: Four.hs
src/Data/Matrix/: Functions.hs
src/OCK/: Base.hs
