cabal-version:       >=1.10
name:                command-line-ock
version:             0.1.0.0
synopsis:            Command Line Clock
-- description:
-- bug-reports:
license:             PublicDomain
author:              sozoro
maintainer:          sorosorosozoro@gmail.com
category:            Graphics
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules: OCK.Base
  default-extensions: LambdaCase
  build-depends:       base >=4.12 && <4.13,
                       vty,
                       vector,
                       matrix,
                       time
  hs-source-dirs:      src
  default-language:    Haskell2010

executable ock
  main-is: OCK.hs
  default-extensions: LambdaCase
  ghc-options: -threaded -rtsopts
  build-depends:       base >=4.12 && <4.13,
                       vty,
                       vector,
                       matrix,
                       time
  hs-source-dirs:      src
  default-language:    Haskell2010
